[gd_scene load_steps=15 format=2]

[ext_resource path="res://Sprites/Player/Revised_SpriteSheet.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Sounds/Footstep.mp3" type="AudioStream" id=3]
[ext_resource path="res://Scenes/MagicBall.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/MagicBall.gd" type="Script" id=5]
[ext_resource path="res://Sprites/Lights/Light Texture.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.5, 26 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 13.5, 26.25 )

[sub_resource type="Animation" id=9]
resource_name = "Fall"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Jump"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Run"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 18, 24.5 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.5, -1 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -1, -1 )
current = true
zoom = Vector2( 0.4, 0.4 )
smoothing_enabled = true
smoothing_speed = 7.0

[node name="Fireball" parent="." instance=ExtResource( 4 )]
position = Vector2( -34, -32 )
script = ExtResource( 5 )

[node name="DashTimer_Holder" type="Node" parent="."]

[node name="DashTimer" type="Timer" parent="DashTimer_Holder"]
wait_time = 0.5
one_shot = true

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 1, -1.25 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Fall = SubResource( 9 )
anims/Idle = SubResource( 4 )
anims/Jump = SubResource( 8 )
anims/RESET = SubResource( 5 )
anims/Run = SubResource( 6 )

[node name="Player_Audio" type="Node2D" parent="."]

[node name="Footsteps" type="AudioStreamPlayer" parent="Player_Audio"]
stream = ExtResource( 3 )
volume_db = -40.0

[node name="Timer" type="Timer" parent="Player_Audio/Footsteps"]
wait_time = 0.1
one_shot = true

[node name="Sword" type="Node2D" parent="."]

[node name="Sword_Area2D" type="Area2D" parent="Sword"]
monitoring = false
monitorable = false

[node name="Sword_CollisionShape2D" type="CollisionShape2D" parent="Sword/Sword_Area2D"]
position = Vector2( 19, 0.5 )
shape = SubResource( 7 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 6 )
texture_scale = 10.0
energy = 1.5

[connection signal="timeout" from="DashTimer_Holder/DashTimer" to="." method="_on_DashTimer_timeout"]
